{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 10,
  "lineage": "690d6383-afa0-7e3a-1a85-6dfa35d22d23",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-20T19:12:05.548-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pivpn-342703/global/firewalls/load-balancer-hc",
            "log_config": [],
            "name": "load-balancer-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/pivpn-342703/global/networks/terraform-network",
            "priority": 1000,
            "project": "pivpn-342703",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pivpn-342703/global/firewalls/load-balancer-hc",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-20T19:12:05.589-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pivpn-342703/global/firewalls/load-balancer-vm-service",
            "log_config": [],
            "name": "load-balancer-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/pivpn-342703/global/networks/terraform-network",
            "priority": 1000,
            "project": "pivpn-342703",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pivpn-342703/global/firewalls/load-balancer-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-03-20T19:12:30.802-07:00",
            "id": "projects/pivpn-342703/regions/us-central1/forwardingRules/load-balancer",
            "ip_address": "35.226.50.232",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "pivpn-342703",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pivpn-342703/regions/us-central1/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/pivpn-342703/regions/us-central1/targetPools/load-balancer"
          },
          "dependencies": [
            "module.lb.google_compute_http_health_check.default",
            "module.lb.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}